--- a/projects.html
+++ b/projects.html
@@ -10,10 +10,10 @@
 <body>
   <div class="topnav2" id="myTopnav">
     <a href="#home" class="home">Home</a>
+    <a href="#about" class="about">About Me</a>
     <a href="#news" class="resume">Resume</a>
     <a href="#contact" class="projects">Projects</a>
     <a href="#about" class="art">Art</a>
-    <a href="#about" class="travels">Travels</a>
     </a>
   </div>
   
