--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,10 @@
     <a href="#about" class="art">Art</a>
     </a>
   </div>
-  
+  <div class="row gallery">
+      <img src="./images/project.png">
+      </div>
+   
 
 
 
@@ -36,6 +39,7 @@
 
  <div class="bottomnav2" id="myBottomnav">
           <a href="#home" class="home">Back to Home </a>
+          <a href="#project"class="projectdwnld">Download Project PDF</a>
           
           </a>
         </div>
