slight style updates and resume updated

--- a/resume.html
+++ b/resume.html
@@ -24,31 +24,32 @@
     <div class="column ed">Education</div>
   </div>
   <div class="row ed1">
-    <div class="column ed2">University of Houston</div>
+    <div class="column ed2 titles" >University of Houston</div>
     <div class="column school"><p>Bachelor of Arts in Music</p><p>Business Administration Minor</p><p>August 2018-December 2021</p><p>Overall GPA: 3.40</p></div>
   </div>
   <div class="row exp">
     <div class="column exp">Experience</div>
   </div>
   <div class="row ex1">
-    <div class="column experience1"><p>Manager Assistant</p><p>Bain & Company</p><p>August 2022-Present</p></div>
-    <div class="column bainex"><ul><p>•	Support and manage 4-6 Senior Managers, Associate Partners, or equivalent’s, complex calendars, travel, expenses, and meeting logistics.  </p> <p>•	Demonstrate exceptional organizational skills by maintaining meticulous email organization and expense reports to streamline information retrieval.   </p></ul></div>
+    <div class="column experience1"><p class="titles">Manager Assistant</p><p>Bain & Company</p><p>August 2022-Present</p></div>
+    <div class="column bainex"><ul><p>•	Provide comprehensive support to 4-6 Senior Managers, Associate Partners, or equivalents, managing their complex calendars,
+      travel arrangements, expenses, and meeting logistics with precision and efficiency.  </p> <p>•	Maintain organized email and expense reports to streamline information retrieval and enhance team workflow   </p></ul><p><ul>•	Actively engage in firm's personal development initiatives through training programs and mentorship opportunities.</ul></p></div>
   </div>
   <div class="row ex2">
-    <div class="column experience2"><p>Executive Assistant</p><p>McKinsey & Company </p><p></p>January 2022-August 2022</p></div>
-    <div class="column mckex"><ul><p>•	Supported and managed 12 Engagement Manager’s and 2 Associate Partner’s complex calendars, travel, and expenses, and coordinated a myriad of calls and logistics per week.   </p><p>•	Managed urgent, confidential, and complex tasks with constant changes in priorities and aggressive timelines.   </p></ul></div>
+    <div class="column experience2"><p class="titles">Executive Assistant</p><p>McKinsey & Company </p><p></p>January 2022-August 2022</p></div>
+    <div class="column mckex"><ul><p>•	Provided comprehensive support to 12 Engagement Managers and 2 Associate Partners, managing calendars, travel, and expenses with meticulous diligence.	 </p><p>•	Implemented streamlined administrative processes to optimize team productivity and effectiveness. </p></ul></div>
   </div>
   <div class="row ex3">
-    <div class="column experience3"><p>Partner / Interim Manager in Charge</p><p>H-E-B Grocery Corp.</p><p>March 2018-January 2022</p></div>
-    <div class="column hebex1"><ul><p>•	Used independent judgement in coaching partners and recommending business decisions to top store leaders and other management.  </p><p>•	Ensured Standard Operating Procedures (SOP) and regulatory requirements are maintained at 100%. </p></ul></div>
+    <div class="column experience3"><p class="titles" >Partner / Interim Manager in Charge</p><p>H-E-B Grocery Corp.</p><p>March 2018-January 2022</p></div>
+    <div class="column hebex1"><ul><p>•	Ensured 100% adherence to Standard Operating Procedures (SOPs), minimizing customer service disruptions and optimized partner productivity. </p><p>•	Fostered a culture of accountability and continuous improvement, promoting teamwork to achieve organizational goals and exceptional customer experiences. </p></ul></div>
   </div>
   <div class="row ex4">
-    <div class="column experience4"><p>Operations & Management Intern / Project Manager</p><p>H-E-B Grocery Corp.</p><p>May 2021-August 2021</p></div>
-    <div class="column hebex2"><ul><p>•	Worked in store and set up my own personal project to help guide a challenged curbside department. Successfully determined training solutions for partners to accelerate long term productivity</p><p>•	Expanded store financial knowledge through expenses, profit reports, and overall product knowledge. </p></ul></div>
+    <div class="column experience4"><p class="titles" >Operations & Management Intern / Project Manager</p><p>H-E-B Grocery Corp.</p><p>May 2021-August 2021</p></div>
+    <div class="column hebex2"><ul><p>•	Managed a personal project aimed at revitalizing the curbside department, addressing operational challenges, and implementing strategies to improve efficiency and customer satisfaction.</p><p>•	Analyzed financial data and key performance indicators to gain insights into store financial management. </p></ul></div>
   </div>
   <div class="row ex4">
-    <div class="column experience4"><p>Operations, Personnel and Events Intern</p><p>Immanuel & Helen Olshan Texas Music Festival</p><p>April 2019-July 2019</p></div>
-    <div class="column hebex2"><ul><p>•	Organized food receptions and events for the entire festival of 100+ participants.</p><p>•	High emphasis on team work to execute daily operations that aligned with the goals of the organization.  </p></ul>
+    <div class="column experience4"><p class="titles">Operations, Personnel and Events Intern</p><p>Immanuel & Helen Olshan Texas Music Festival</p><p>April 2019-July 2019</p></div>
+    <div class="column hebex2"><ul><p>•	Coordinated and managed operations for events catering to over one hundred participants, ensuring high-quality experiences.</p><p>•	Collaborated closely with team members to support daily operations and achieve organizational goals, demonstrating strong teamwork and alignment with the festival's main objectives. </p></ul>
       </div>
     </div>
     <div class="row skills">
@@ -56,7 +57,7 @@
     </div>
     <div class="row lang">
       <div class="column lang">Programming Languges </div>
-      <div class="column lang">Javascript/TypeScript | HTML/CSS</div>
+      <div class="column lang">Javascript| HTML/CSS</div>
     </div>
     <div class="row frame">
       <div class="column lang">Frameworks & Libraries</div>
@@ -68,7 +69,7 @@
     </div>
     <div class="row add">
       <div class="column add">Additional</div>
-      <div class="column add">Slack | Visual Studio | Box | Microsoft Office | Google Suite </div>
+      <div class="column add">Slack | Visual Studio | Box | Microsoft Office Suite | Google Suite | Coupa | Rydoo</div>
     </div>
 </div>
   
